--- a/OOP-index.html
+++ b/OOP-index.html
@@ -42,8 +42,8 @@
 
     <!-- <div class="movieBanner-Container"></div> -->
 
-    <!-- <div class="main-Home-grid-container">
-      <div class="movie-grid-container">
+     <div class="main-Home-grid-container">
+      <!-- <div class="movie-grid-container">
         <div class="img-container">
           <img class="imgPoster" src="" alt="" />
         </div>
@@ -51,8 +51,8 @@
           <p class="movie-title">The Batman</p>
           <p class="movie-year">2024</p>
         </div>
-      </div>
-    </div> -->
+      </div> -->
+    </div>
 
     <script src="OOP-script.js"></script>
   </body>
