Updted the code to make it shorter but equaly effective.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img src="Movie Dashboard Logo.svg" alt="Logo" />
         </div>
         <div class="sub-header-SearchContainer">
-          <form action="">
+          <form action="" class="formContainer">
             <input
               type="text"
               class="searchForm"
