Trying to display movie genres

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <div class="sub-header">
         <div class="sub-header-LogoContainer">
-          <img src="Movie Dashboard Logo.svg" alt="Logo" />
+          <a href="index.html"><img src="Movie Dashboard Logo.svg" alt="Logo" class="logoHeader" /></a>
         </div>
         <div class="sub-header-SearchContainer">
           <form action="" class="formContainer">
@@ -32,7 +32,7 @@
           <nav>
             <ul>
               <li>Home</li>
-              <li>Dashboard</li>
+              <li><a href="dashboard.html">Dashboard</li></a>
               <li>Login</li>
             </ul>
           </nav>
