Working on dropdown menu for each movie container

--- a/Dashboard/Dashboard.html
+++ b/Dashboard/Dashboard.html
@@ -8,6 +8,25 @@
   </head>
   <body>
     <h1>Hello, dashboard</h1>
+    <div class="generalInfoContainer">
+      <div class="infoCardContainer">
+        <div class="imgContainer">
+          <img src="Movie Dashboard Logo.svg" alt="" class="imgProfile" />
+        </div>
+        <div class="socialMediaContainer">
+          <div class="twitterContainer">
+            <img src="" alt="" />
+          </div>
+          <div class="facebookContainer">
+            <img src="" alt="" />
+          </div>
+          <div class="instagram">
+            <img src="" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="graphicsContainer"></div>
+    </div>
     <script src="Dashboard.js"></script>
   </body>
 </html>
