--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <nav>
             <ul>
               <li>Home</li>
-              <li><a href="dashboard.html">Dashboard</li></a>
+              <li><a href="/Dashboard/Dashboard.html">Dashboard</li></a>
               <li>Login</li>
             </ul>
           </nav>
