Adjusting the dashboard page

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -27,6 +27,19 @@
       </div>
       <div class="graphicsContainer"></div>
     </div>
+    <div class="generalMovieListContainer">
+      <div class="ListContainer">
+        <div class="movieContainer">
+          <div class="imgContainer">
+            <img src="" alt="" />
+          </div>
+          <div class="infoContainer">
+            <p class="title">Example</p>
+            <p class="year">1991</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="Dashboard.js"></script>
   </body>
 </html>
