--- a/OOP-index.html
+++ b/OOP-index.html
@@ -43,15 +43,15 @@
     <!-- <div class="movieBanner-Container"></div> -->
 
     <div class="main-Home-grid-container">
-      <!-- <div class="movie-grid-container">
-        <div class="img-container">
+      <div class="movie-grid-container">
+        <!-- <div class="img-container">
           <img class="imgPoster" src="" alt="" />
         </div>
         <div class="info-container">
           <p class="movie-title">The Batman</p>
           <p class="movie-year">2024</p>
-        </div>
-      </div> -->
+        </div> -->
+      </div>
     </div>
 
     <script src="OOP-script.js"></script>
