--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             />
           </form>
           <button class="search-button">
-            <span class="material-symbols-outlined"> manage_search </span>
+            <i class="material-symbols-outlined"> manage_search </i>
           </button>
         </div>
         <div class="sub-header-MenuContainer">
