Adding colors to genre elements

--- a/Dashboard/Dashboard.html
+++ b/Dashboard/Dashboard.html
@@ -36,6 +36,7 @@
           <div class="infoContainer">
             <p class="title">Example</p>
             <p class="year">1991</p>
+            <span class="genre-green">Fantasy</span>
           </div>
         </div>
       </div>
