Updating layout of genre containers

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- <div class="movieBanner-Container"></div> -->
 
     <div class="main-Home-grid-container">
-      <div class="movie-grid-container">
+      <!-- <div class="movie-grid-container">
         <div class="img-container">
           <button class="menuMovieBtn">...</button>
           <img class="imgPoster" src="" alt="" />
@@ -51,9 +51,8 @@
         <div class="info-container">
           <p class="movie-title">The Batman</p>
           <p class="movie-year">2024</p>
-          <span class="fantasy-Green">Fantasy</span>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <script src="index.js"></script>
