Fixing styling issues

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   </head>
   <body>
     <header>
-      <div class="sub-header">
         <div class="sub-header-LogoContainer">
           <a href="index.html"><img src="Movie Dashboard Logo.svg" alt="Logo" class="logoHeader" /></a>
         </div>
         <div class="sub-header-SearchContainer">
-          <form action="" class="formContainer">
+          <form class="formContainer">
             <input
               type="text"
               class="searchForm"
-              placeholder="Search movies, series and tv shows..."
+              name="searchForm"
+              placeholder="Search movies and tv shows..."
             />
           </form>
           <button class="search-button">
@@ -37,7 +37,6 @@
             </ul>
           </nav>
         </div>
-      </div>
     </header>
 
     <!-- <div class="movieBanner-Container"></div> -->
