--- a/index.html
+++ b/index.html
@@ -12,31 +12,33 @@
   </head>
   <body>
     <header>
-        <div class="sub-header-LogoContainer">
-          <a href="index.html"><img src="Movie Dashboard Logo.svg" alt="Logo" class="logoHeader" /></a>
-        </div>
-        <div class="sub-header-SearchContainer">
-          <form class="formContainer">
-            <input
-              type="text"
-              class="searchForm"
-              name="searchForm"
-              placeholder="Search movies and tv shows..."
-            />
-          </form>
-          <button class="search-button">
-            <i class="material-symbols-outlined"> manage_search </i>
-          </button>
-        </div>
-        <div class="sub-header-MenuContainer">
-          <nav>
-            <ul>
-              <li>Home</li>
-              <li><a href="/Dashboard/Dashboard.html">Dashboard</li></a>
-              <li>Login</li>
-            </ul>
-          </nav>
-        </div>
+      <div class="sub-header-LogoContainer">
+        <a href="index.html"
+          ><img src="Movie Dashboard Logo.svg" alt="Logo" class="logoHeader"
+        /></a>
+      </div>
+      <div class="sub-header-SearchContainer">
+        <form class="formContainer">
+          <input
+            type="text"
+            class="searchForm"
+            name="searchForm"
+            placeholder="Search movies and tv shows..."
+          />
+        </form>
+        <button class="search-button">
+          <i class="material-symbols-outlined"> manage_search </i>
+        </button>
+      </div>
+      <div class="sub-header-MenuContainer">
+        <nav>
+          <ul>
+            <li>Home</li>
+            <!-- <li><a href="/Dashboard/Dashboard.html">Dashboard</li></a>
+              <li>Login</li> -->
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <!-- <div class="movieBanner-Container"></div> -->
